# must_footprint_v0

./: .gitignore  README.md  pyproject.toml
docs/: SPEC.md  lessons.md  review.md  todo.md
reference/: desi1b-20240520-boundaries.ecsv  preprocess_tiles.py
scripts/: build_review_pdf.py  demo_reference_tiling.py  run_review_demo.py
src/must_footprint/: __init__.py  boundary.py  coverage.py  demo.py  plotting.py  tiling.py
tests/: test_boundary_and_tiling.py
