[project]
name = "must-footprint"
version = "0.1.0"
description = "Demo tools for designing the MUST survey footprint and focal-plane tiling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10",
  "numpy>=2.0",
]

[project.scripts]
must-footprint-demo = "must_footprint.demo:main"

[project.optional-dependencies]
astro = [
    "astropy>=7.2.0",
    "shapely>=2.1.2",
]
background-map = [
    "reproject>=0.19.0",
    "scipy>=1.17.1",
]
fits-density = [
    "fitsio>=1.2.8",
    "healpy>=1.19.0",
]
skygrid = [
    "m4opt>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
